--- a/painel.html
+++ b/painel.html
@@ -1,40 +1,4 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-<meta charset="UTF-8">
-<title>AI Prof - Painel</title>
-</head>
-<body>
-
-<h1>Bem-vindo ao AI Prof</h1>
-
-<p>Usuário: <span id="user"></span></p>
-<p>Moedas: <span id="moedas">0</span></p>
-
-<div>
-    <h3>Chat do AI Prof</h3>
-    <div id="mensagens" style="border:1px solid #000; height:200px; overflow:auto;"></div>
-
-    <button onclick="enviar()">Enviar</button>
-    <input id="texto" placeholder="Digite sua pergunta">
-</div>
-
 <script>
-const usuario = localStorage.getItem("usuarioLogado");
-
-if (!usuario) {
-    alert("Você precisa fazer login");
-    window.location.href = "index.html";
-}
-
-document.getElementById("user").innerText = usuario;
-
-let moedas = 0;
-setInterval(() => {
-    moedas++;
-    document.getElementById("moedas").innerText = moedas;
-}, 1000);
-
 function enviar() {
     const t = texto.value;
     if (!t) return;
@@ -42,9 +6,52 @@ function enviar() {
     mensagens.innerHTML += "<p><b>Você:</b> " + t + "</p>";
     texto.value = "";
 
-    mensagens.innerHTML += "<p><b>AI Prof:</b> Estou aprendendo a responder 📘</p>";
+    setTimeout(() => {
+        mensagens.innerHTML += "<p><b>AI Prof:</b> " + responderIA(t) + "</p>";
+        mensagens.scrollTop = mensagens.scrollHeight;
+    }, 500);
+}
+
+function responderIA(pergunta) {
+    pergunta = pergunta.toLowerCase();
+
+    // HORAS
+    if (pergunta.includes("hora")) {
+        const h = new Date().toLocaleTimeString("pt-BR", {
+            timeZone: "America/Sao_Paulo"
+        });
+        return "Agora são " + h + " no horário de Brasília.";
+    }
+
+    // DATA
+    if (pergunta.includes("dia") || pergunta.includes("data")) {
+        return "Hoje é " + new Date().toLocaleDateString("pt-BR") + ".";
+    }
+
+    // BRASIL
+    if (pergunta.includes("brasil")) {
+        return "O Brasil foi descoberto em 1500 e tem mais de 524 anos de história.";
+    }
+
+    // MATEMÁTICA SIMPLES
+    if (pergunta.includes("+") || pergunta.includes("-") || pergunta.includes("*") || pergunta.includes("/")) {
+        try {
+            return "O resultado é " + eval(pergunta.replace(/[^0-9+\-*/.]/g, ""));
+        } catch {
+            return "Não consegui calcular isso.";
+        }
+    }
+
+    // PERGUNTAS GERAIS
+    if (pergunta.includes("quem é você")) {
+        return "Eu sou o AI Prof, seu assistente inteligente do jogo.";
+    }
+
+    if (pergunta.includes("como você funciona")) {
+        return "Eu respondo perguntas usando regras inteligentes programadas no jogo.";
+    }
+
+    // RESPOSTA UNIVERSAL (NUNCA FICA MUDA)
+    return "Pergunta interessante! Posso te ajudar com horários, datas, matemática básica e informações gerais.";
 }
 </script>
-
-</body>
-</html>
