--- a/index.html
+++ b/index.html
@@ -2,86 +2,89 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
-<title>Video Chat</title>
+<title>Cadastro</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
 body {
-  background: #0f172a;
-  color: white;
-  font-family: Arial;
-  text-align: center;
+  background:#0f172a;
+  color:white;
+  font-family:Arial;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  height:100vh;
 }
-
-video {
-  width: 45%;
-  border-radius: 12px;
-  background: black;
-  margin: 5px;
+.card {
+  background:#020617;
+  padding:20px;
+  border-radius:14px;
+  width:300px;
 }
-
+input, select, button {
+  width:100%;
+  padding:10px;
+  margin-top:8px;
+  border-radius:8px;
+  border:none;
+}
 button {
-  padding: 10px 15px;
-  margin: 10px;
-  border-radius: 8px;
-  border: none;
-  background: #22c55e;
-  font-size: 16px;
+  background:#22c55e;
 }
 </style>
 </head>
 
 <body>
 
-<h2>📞 Video Chat</h2>
+<div class="card">
+  <h3>👤 Cadastro / Login</h3>
 
-<video id="localVideo" autoplay muted></video>
-<video id="remoteVideo" autoplay></video>
+  <input id="nome" placeholder="Nome">
+  <input id="senha" type="password" placeholder="Senha">
 
-<br>
+  <select id="genero">
+    <option value="">Gênero</option>
+    <option value="Masculino">Masculino</option>
+    <option value="Feminino">Feminino</option>
+  </select>
 
-<button onclick="startCamera()">Ligar Câmera</button>
-<button onclick="startCall()">Iniciar Chamada</button>
+  <input id="meuId" placeholder="Seu ID (7 dígitos)" maxlength="7">
+
+  <button onclick="entrar()">Entrar</button>
+</div>
 
 <script>
-let localStream;
-let peerConnection;
+function entrar() {
+  const nome = nomeInput.value.trim();
+  const senha = senhaInput.value.trim();
+  const genero = generoSelect.value;
+  const id = meuId.value.trim();
 
-const config = {
-  iceServers: [{ urls: "stun:stun.l.google.com:19302" }]
-};
+  if (!nome || !senha || !genero || !/^\d{7}$/.test(id)) {
+    alert("Preencha tudo corretamente (ID com 7 dígitos)");
+    return;
+  }
 
-async function startCamera() {
-  localStream = await navigator.mediaDevices.getUserMedia({
-    video: true,
-    audio: true
-  });
-  localVideo.srcObject = localStream;
+  localStorage.setItem("usuario_nome", nome);
+  localStorage.setItem("usuario_genero", genero);
+  localStorage.setItem("usuario_id", id);
+
+  // cria lista de contatos se não existir
+  if (!localStorage.getItem("contatos")) {
+    localStorage.setItem("contatos", JSON.stringify([]));
+  }
+
+  location.href = "chat.html";
 }
 
-function startCall() {
-  peerConnection = new RTCPeerConnection(config);
+const nomeInput = document.getElementById("nome");
+const senhaInput = document.getElementById("senha");
+const generoSelect = document.getElementById("genero");
+const meuId = document.getElementById("meuId");
 
-  localStream.getTracks().forEach(track => {
-    peerConnection.addTrack(track, localStream);
-  });
-
-  peerConnection.ontrack = event => {
-    remoteVideo.srcObject = event.streams[0];
-  };
-
-  peerConnection.onicecandidate = event => {
-    if (event.candidate) {
-      console.log("ICE:", JSON.stringify(event.candidate));
-    }
-  };
-
-  peerConnection.createOffer()
-    .then(offer => peerConnection.setLocalDescription(offer))
-    .then(() => {
-      console.log("COPIE ESTA OFFER:");
-      console.log(JSON.stringify(peerConnection.localDescription));
-    });
+// login automático
+if (localStorage.getItem("usuario_nome")) {
+  location.href = "chat.html";
 }
 </script>
 
