--- a/chat.html
+++ b/chat.html
@@ -4,101 +4,120 @@
 <meta charset="UTF-8">
 <title>Chat</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 <style>
-body { margin:0; background:#0f172a; color:white; font-family:Arial; }
-header { background:#020617; padding:10px; text-align:center; }
-.container { padding:10px; }
-.contact {
-  background:#020617;
-  padding:10px;
-  border-radius:8px;
-  margin-bottom:6px;
+body {
+  margin: 0;
+  font-family: Arial;
+  background: #0f172a;
+  color: white;
 }
+header {
+  background: #020617;
+  padding: 10px;
+}
+#chat {
+  height: 60vh;
+  padding: 10px;
+  overflow-y: auto;
+}
+.msg {
+  margin-bottom: 8px;
+}
+.user { color: #60a5fa; }
+.me { color: #22c55e; }
 input, button {
-  width:100%;
-  padding:10px;
-  margin-top:6px;
-  border-radius:8px;
-  border:none;
+  width: 100%;
+  padding: 10px;
+  border: none;
+  border-radius: 8px;
 }
-button { background:#22c55e; }
+button { background: #22c55e; }
+video {
+  width: 48%;
+  border-radius: 10px;
+  background: black;
+}
 </style>
 </head>
-
 <body>
 
-<header>
-  👤 <span id="userInfo"></span>
-</header>
+<header id="top"></header>
 
-<div class="container">
+<div id="chat"></div>
 
-<h3>➕ Adicionar contato</h3>
-<input id="novoNumero" placeholder="Número (ex: 829XXXXXXXX)">
-<button onclick="addContato()">Adicionar</button>
+<input id="msg" placeholder="Mensagem">
+<button onclick="enviar()">Enviar</button>
 
 <hr>
 
-<h3>💬 Contatos</h3>
-<div id="lista"></div>
+<h3>📞 Chamada de vídeo</h3>
+<input id="numeroLigar" placeholder="Número do contato">
+<button onclick="ligar()">Ligar</button>
 
-<button onclick="sair()">🚪 Sair</button>
+<br><br>
+<video id="localVideo" autoplay muted></video>
+<video id="remoteVideo" autoplay></video>
 
-</div>
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+import { getFirestore, doc, setDoc, onSnapshot } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
-<script>
-const meuNumero = localStorage.getItem("usuario_logado");
-if (!meuNumero) location.href = "index.html";
+// 🔥 COLOQUE SEUS DADOS DO FIREBASE
+const firebaseConfig = {
+  apiKey: "SUA_API_KEY",
+  authDomain: "SEU_PROJETO.firebaseapp.com",
+  projectId: "SEU_PROJETO"
+};
 
-const userData = JSON.parse(localStorage.getItem("user_" + meuNumero));
-userInfo.innerText = `${userData.nome} (${userData.genero}) - ${meuNumero}`;
+const app = initializeApp(firebaseConfig);
+const db = getFirestore(app);
 
-let contatos = JSON.parse(localStorage.getItem("contatos_" + meuNumero)) || [];
+const user = JSON.parse(localStorage.getItem("usuario"));
+if (!user) location.href = "index.html";
 
-function render() {
-  lista.innerHTML = "";
-  contatos.forEach(num => {
-    const data = JSON.parse(localStorage.getItem("user_" + num));
-    const div = document.createElement("div");
-    div.className = "contact";
-    div.innerText = data
-      ? `${data.nome} - ${num}`
-      : `Contato ${num}`;
-    lista.appendChild(div);
+top.innerText = `${user.nome} • ${user.numero}`;
+
+function enviar() {
+  if (!msg.value) return;
+  addMsg("Você: " + msg.value, "me");
+  msg.value = "";
+}
+
+function addMsg(t, c) {
+  const d = document.createElement("div");
+  d.className = "msg " + c;
+  d.innerText = t;
+  chat.appendChild(d);
+  chat.scrollTop = chat.scrollHeight;
+}
+
+// 🎥 WEBRTC
+const servers = { iceServers: [{ urls: "stun:stun.l.google.com:19302" }] };
+let pc, localStream;
+
+window.ligar = async function () {
+  const destino = numeroLigar.value;
+  if (!destino) return alert("Digite o número");
+
+  pc = new RTCPeerConnection(servers);
+  localStream = await navigator.mediaDevices.getUserMedia({ video: true, audio: true });
+  localVideo.srcObject = localStream;
+  localStream.getTracks().forEach(t => pc.addTrack(t, localStream));
+
+  pc.ontrack = e => remoteVideo.srcObject = e.streams[0];
+
+  const offer = await pc.createOffer();
+  await pc.setLocalDescription(offer);
+
+  await setDoc(doc(db, "calls", destino), { offer, from: user.numero });
+
+  onSnapshot(doc(db, "calls", destino), snap => {
+    const data = snap.data();
+    if (data?.answer && !pc.currentRemoteDescription) {
+      pc.setRemoteDescription(data.answer);
+    }
   });
-}
-
-function addContato() {
-  const num = novoNumero.value.trim();
-
-  if (!/^(82|79)9\d{8}$/.test(num)) {
-    alert("Número inválido");
-    return;
-  }
-
-  if (num === meuNumero) {
-    alert("Esse é seu número");
-    return;
-  }
-
-  if (contatos.includes(num)) {
-    alert("Contato já adicionado");
-    return;
-  }
-
-  contatos.push(num);
-  localStorage.setItem("contatos_" + meuNumero, JSON.stringify(contatos));
-  novoNumero.value = "";
-  render();
-}
-
-function sair() {
-  localStorage.removeItem("usuario_logado");
-  location.href = "index.html";
-}
-
-render();
+};
 </script>
 
 </body>
